fixed dark mode issues on the cards -ss

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --style-colour: rgba(18, 184, 62);
     --offset-text-colour: black;
     --offset-black: white;
+    --side-by-side-colour: #f2f8f9;
 }
 
 /***** generic classes *****/
@@ -60,7 +61,7 @@ u:hover {
 }
 
 .middle-image {
-    max-width: 60%;
+    height: 300px;
     transition: 0.1s;
     position: relative;
     margin-top: -10px;
@@ -237,8 +238,8 @@ section {
     border-radius: 1em;
     border: none;
     align-items: center;
-    justify-content: center;
-    background: #f2f8f9;
+    justify-content: space-evenly;
+    background: var(--side-by-side-colour);
     transition: 0.2s;
     box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
 }
@@ -248,8 +249,7 @@ section {
     transition: all 0.2s ease-out;
     box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
     top: -4px;
-    border: 1px solid var(--style-colour);
-    background-color: #FFFFFF;
+    background-color: var(--offset-black);
     transform: scale(1.02);
 }
 
@@ -264,7 +264,7 @@ section {
 .text-item {
     height: 100%;
     width: fit-content;
-    background: transparent;
+    background: none;
     padding: 10px;
     border-radius: 1em;
 }
@@ -274,14 +274,12 @@ section {
 }
 
 .image-item {
-    display: flex;
-    justify-content: center;
-    width: 48%;
-    height: 100%;
+    width: fit-content;
+    height: fit-content;
 }
 
 .page-three {
-    height: 100vh;
+    height: fit-content;
 }
 
 .intro-block {
@@ -318,6 +316,7 @@ section {
 
 .footer-font {
     font-size: 15px;
+    margin: 3px;
 }
 
 .icon-container {
